# genetics-23andMe

./: .gitignore  AGENTS.md  README.md  genome_gui.py  pyproject.toml  test_run.py
docs/: plan.md
docs/adr/: 0001-use-uv.md  0002-use-ruff.md
legacy/: foundMyFitness.py  genome.py  genome_gui.py
src/genetics_23andme/: __init__.py  core.py  fitness.py  gui.py
tests/: test_core.py
